Testing email verification functionality feedback

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 SERVER_HOST=localhost
 SERVER_PORT=8000
 
+DOMAIN=filekeeper.fossy.my.id
+
 CORS_PROTO=https
 CORS_LIST=filekeeper.fossy.my.id:443,fossy.my.id:443
 CORS_METHODS=POST,GET
