Add some tool for docker

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SERVER_HOST=localhost
+SERVER_HOST=0.0.0.0
 SERVER_PORT=8000
 
 DOMAIN=filekeeper.fossy.my.id
@@ -7,7 +7,7 @@ CORS_PROTO=https
 CORS_LIST=filekeeper.fossy.my.id:443,fossy.my.id:443
 CORS_METHODS=POST,GET
 
-DB_HOST=127.0.0.1
+DB_HOST=192.168.1.5
 DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=test123
