Move SMTP credentials to .env file

--- a/.env
+++ b/.env
@@ -13,5 +13,10 @@ DB_USERNAME=root
 DB_PASSWORD=test123
 DB_NAME=filekeeper
 
+SMTP_HOST=mail.fossy.my.id
+SMTP_PORT=25
+SMTP_USER=test@fossy.my.id
+SMTP_PASSWORD=Test123456
+
 SESSION_NAME=Session
 SESSION_MAX_AGE=604800
