--- a/.env
+++ b/.env
@@ -7,16 +7,16 @@ CORS_PROTO=https
 CORS_LIST=filekeeper.fossy.my.id:443,fossy.my.id:443
 CORS_METHODS=POST,GET
 
-DB_HOST=192.168.1.5
-DB_PORT=3306
-DB_USERNAME=root
-DB_PASSWORD=test123
+DB_HOST=
+DB_PORT=
+DB_USERNAME=
+DB_PASSWORD=
 DB_NAME=filekeeper
 
-SMTP_HOST=mail.fossy.my.id
-SMTP_PORT=25
-SMTP_USER=test@fossy.my.id
-SMTP_PASSWORD=Test123456
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASSWORD=
 
 SESSION_NAME=Session
 SESSION_MAX_AGE=604800
