--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,18 +9,18 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-      
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
-      - name: Build and push Docker image
+
+      - name: Build and push Docker image for main
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -28,8 +28,9 @@ jobs:
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/filekeeper:${{ github.ref_name }}
             ${{ secrets.DOCKERHUB_USERNAME }}/filekeeper:latest
+          platforms: linux/amd64,linux/arm64
         if: github.ref == 'refs/heads/main'
-      
+
       - name: Build and push Docker image for staging
         uses: docker/build-push-action@v2
         with:
@@ -37,4 +38,5 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/filekeeper:staging
+          platforms: linux/amd64,linux/arm64
         if: github.ref == 'refs/heads/staging'
