--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,15 +13,21 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
+        
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        
       - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push Docker image for main
-        uses: docker/setup-buildx-action@v3
+        uses: docker/build-push-action@v6
         with:
           context: .
           push: true
@@ -32,7 +38,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
 
       - name: Build and push Docker image for staging
-        uses: docker/setup-buildx-action@v3
+        uses: docker/build-push-action@v6
         with:
           context: .
           push: true
