--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,3 +4,9 @@ updates:
     directory: /
     schedule:
       interval: daily
+    commit-message:
+      prefix: "deps"
+    groups:
+      all-updates:
+        patterns:
+          - "*"
