--- a/.air.toml
+++ b/.air.toml
@@ -4,12 +4,12 @@ tmp_dir = "tmp"
 
 [build]
   args_bin = []
-  bin = "tmp\\main.exe --log true"
+  bin = "tmp/main.exe --log true"
   cmd = "go build -o ./tmp/main.exe ."
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata", "uploads"]
   exclude_file = []
-  exclude_regex = ["_test.go"]
+  exclude_regex = ["_test.go"]git
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
