--- a/.gitea/workflows/main.yml
+++ b/.gitea/workflows/main.yml
@@ -12,19 +12,17 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
-        
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-        
+        uses: actions/checkout@v4
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        
+
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: git.fossy.my.id
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image for main
         uses: docker/build-push-action@v6
@@ -32,7 +30,7 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/filekeeper:latest
+            git.fossy.my.id/${{ secrets.DOCKER_USERNAME }}/filekeeper:latest
           platforms: linux/amd64,linux/arm64
         if: github.ref == 'refs/heads/main'
 
@@ -42,6 +40,6 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/filekeeper:staging
+            git.fossy.my.id/${{ secrets.DOCKER_USERNAME }}/filekeeper:staging
           platforms: linux/amd64,linux/arm64
         if: github.ref == 'refs/heads/staging'
